tests/negative/gold/indent4-test.gold
tests/negative/indent4-test.toit:9:11: error: Unexpected delimiter
    break ? true : false
          ^
Compilation failed
